# mrs_module_led_strip_driver

./: CMakeLists.txt  README.md  package.xml  plugins.xml
firmware/: firmware.ino  msgs.h
launch/: uav.launch
src/: .llcp_ros.cpp.swp  led_strip_driver.cpp
